add channel creator

--- a/config.json
+++ b/config.json
@@ -1,3 +1,6 @@
 {
-    "token": "token-here"
+    "token": "token-here",
+    "categoryName": "Voice Chat 🎤",
+    "channelName": "➕ Create Channel",
+    "testGuild": "412986571944361984"
 }
