Modernize: discord.js v14, better-sqlite3, knex v3, node 20
- discord.js v12 → v14: GatewayIntentBits, ChannelType, PermissionFlagsBits
- message → messageCreate, hasPermission → permissions.has
- channelID → channelId, parentID → parentId
- guild.channels.create() new API signature
- permissionOverwrites v14 API (edit/delete instead of overwritePermissions)
- sqlite3 → better-sqlite3
- knex v2 → v3
- Dockerfile: node:18-slim → node:20-slim
- ActivityType.Watching instead of string

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"dependencies": {
-		"discord.js": "^12.4.1",
-		"knex": "^2.3.0",
-		"sqlite3": "^5.1.2"
+		"discord.js": "^14.16.3",
+		"knex": "^3.1.0",
+		"better-sqlite3": "^11.7.0"
 	}
 }
