refactor: move Discord token from config.json to env var
- Token now read from DISCORD_TOKEN env var (falls back to config.json)
- Removed token from config.json
- Updated config.json.example

--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,6 @@
 {
-    "token": "token-here",
-    "categoryName": "Voice Chat🎤",
-    "channelName": "➕ Create Channel",
-    "highBitrateGuilds": [
-        "412986571944361984"
-    ]
+  "categoryName": "Voice Chat🎤",
+  "channelName": "➕ Create Channel",
+  "testGuild": "",
+  "highBitrateGuilds": []
 }
